add pastry